--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,75 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <article class="example" id="uk">
+      <!-- <h1>HTML-partials</h1> -->
+
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+
+      <div class="gallery">
+        <!-- Obraz karty 
+        <div class="photo-card">
+          <img src="" alt="" loading="lazy" />
+          <div class="info">
+            <p class="info-item">
+              <b>Likes</b>
+            </p>
+            <p class="info-item">
+              <b>Views</b>
+            </p>
+            <p class="info-item">
+              <b>Comments</b>
+            </p>
+            <p class="info-item">
+              <b>Downloads</b>
+            </p>
+          </div>
+        </div>
+        -->
+      </div>
+
+      <button type="button" class="load-more">Load more</button>
+
+      <!-- <img src="images/logo.png" alt="" width="320" /> -->
+
+      <!-- <p>
+        The
+        <a
+          href="https://github.com/posthtml/posthtml-include"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          posthtml-include
+        </a>
+        plugin allows you to add code from other HTML files (fragments) to HTML
+        page files. Fragments are stored in the
+        <code>src/partials</code> folder. The addition occurs when compiling
+        page files, such as <code>index.html</code>.
+      </p>
+
+      <p>
+        This <code>example.html</code> file is an example of such a snippet,
+        with the markup of a certain part of the main page. This is very
+        convenient for team development on student projects, when several people
+        write in one HTML file at once.
+      </p>
+
+      <p>
+        The syntax for adding a fragment to the main file is:
+        <code>
+          &lt;include src="./partials/filename.html"&gt;&lt;/include&gt;</code
+        >
+      </p> -->
+
+      <!-- <div class="background"></div> -->
+    </article>
   </body>
 </html>
